[gd_scene load_steps=3 format=3 uid="uid://cyb82rr82k8vd"]

[ext_resource type="Script" path="res://scripts/tools/map_preview_tool.gd" id="1_0d2qh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vy3p6"]
bg_color = Color(0.129412, 0.129412, 0.129412, 0.901961)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.32549, 0.32549, 0.32549, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MapPreviewTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0d2qh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="ParametersPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 300.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vy3p6")

[node name="Label" type="Label" parent="ParametersPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Map Parameters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ParametersPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ParametersPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="PreviewPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewportContainer" type="SubViewportContainer" parent="PreviewPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PreviewPanel/ViewportContainer"]
handle_input_locally = false
size = Vector2i(980, 640)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="PreviewPanel/ViewportContainer/SubViewport"]
zoom = Vector2(0.5, 0.5)

[node name="ControlsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_vy3p6")

[node name="GenerateButton" type="Button" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 120.0
offset_bottom = 15.0
grow_vertical = 2
text = "Generate Map"

[node name="SaveButton" type="Button" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = -15.0
offset_right = 240.0
offset_bottom = 15.0
grow_vertical = 2
text = "Save Config"

[node name="ResetButton" type="Button" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 260.0
offset_top = -15.0
offset_right = 360.0
offset_bottom = 15.0
grow_vertical = 2
text = "Reset Defaults"

[node name="StatusLabel" type="Label" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -13.0
offset_right = -20.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "Ready"
horizontal_alignment = 2

[node name="StatsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 980.0
offset_top = 10.0
offset_right = 1270.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vy3p6")

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TilesCountLabel" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Tiles: 0"

[node name="RoomsCountLabel" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Rooms: 0"

[node name="GenerationTimeLabel" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Generation Time: 0 sec" 